--- a/src/common/main.scss
+++ b/src/common/main.scss
@@ -18,7 +18,8 @@ body {
     /* 设置高度为视口高度 */
     height: 100vh;
     // background: url("@/assets/imgs/白.jpg");
-    background: #000;
+    background: #fff;
+    color: #000;
     z-index: -1;
     // background-size: cover;
 }
