--- a/src/common/main.scss
+++ b/src/common/main.scss
@@ -23,3 +23,24 @@ body {
     z-index: -1;
     // background-size: cover;
 }
+
+::-webkit-scrollbar {
+    /*滚动条整体样式*/
+    width: 8px;
+    /*高宽分别对应横竖滚动条的尺寸*/
+    height: 1px;
+}
+
+::-webkit-scrollbar-thumb {
+    /*滚动条里面小方块*/
+    border-radius: 8px;
+    box-shadow: inset 0 0 5px rgba(194, 194, 194, 0.2);
+    background: #888888;
+}
+
+::-webkit-scrollbar-track {
+    /*滚动条里面轨道*/
+    box-shadow: inset 0 0 5px rgba(170, 170, 170, 0.2);
+    border-radius: 8px;
+    background: #ededed;
+}
