--- a/src/components/Books/style/index.scss
+++ b/src/components/Books/style/index.scss
@@ -19,6 +19,19 @@
         position: absolute;
     }
 
+    .books-txt {
+        display: flex;
+
+        .txt {
+            cursor: pointer;
+            margin-right: 10px;
+
+            &:hover {
+                color: #389cff;
+            }
+        }
+    }
+
     .center {
         width: 100%;
         padding: 0 3px;
@@ -41,5 +54,24 @@
     .main {
         margin: 10px 1px 10px 10px;
         overflow-y: auto;
+    }
+
+    .lock {
+        bottom: 8px;
+        font-size: 12px;
+        color: rgb(100, 100, 100);
+        margin-bottom: 5px;
+        display: flex;
+        justify-content: space-between;
+        padding: 0 10px;
+
+        .lock-left,
+        .lock-right {
+            cursor: pointer;
+
+            &:hover {
+                color: #389cff;
+            }
+        }
     }
 }
