--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3444963 */
-  src: url('iconfont.woff2?t=1714297159334') format('woff2'),
-       url('iconfont.woff?t=1714297159334') format('woff'),
-       url('iconfont.ttf?t=1714297159334') format('truetype');
+  src: url('iconfont.woff2?t=1714356707858') format('woff2'),
+       url('iconfont.woff?t=1714356707858') format('woff'),
+       url('iconfont.ttf?t=1714356707858') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-pingmuquanping:before {
+  content: "\e781";
+}
+
+.icon-tuichuquanping:before {
+  content: "\e64b";
 }
 
 .icon-zhuti_tiaosepan_o:before {
