--- a/src/components/Books/style/index.scss
+++ b/src/components/Books/style/index.scss
@@ -4,6 +4,8 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 
     ::v-deep .el-overlay {
         position: absolute;
